--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -1,7 +1,11 @@
 //----------------------------------------
-//  App
+//  Header
 //----------------------------------------
 
-.container {
-  padding: 24px 15%;
+.mat-toolbar {
+
+  .flex {
+    flex: 1;
+  }
+
 }
