--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,6 +23,6 @@
     <mat-error>Le champ ne peut pas être vide</mat-error>
   </mat-form-field>
 
-  <button mat-flat-button color="primary" [ogiLoadingButton]="loading">Se Connecter</button>
+  <button mat-flat-button color="primary">Se Connecter</button>
 
 </form>
