--- a/src/app/article/articles-table/articles-table.component.html
+++ b/src/app/article/articles-table/articles-table.component.html
@@ -1,4 +1,4 @@
-<mat-table [dataSource]="dataSource">
+<mat-table [dataSource]="dataSource" class="mat-elevation-z1">
   <ng-container matColumnDef="nom">
     <mat-header-cell *matHeaderCellDef> Nom </mat-header-cell>
     <mat-cell *matCellDef="let article"> {{article.nom}} </mat-cell>
