style(login): new style

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
       matInput
       placeholder="Login"
       formControlName="username"
-      />
+    />
 
     <mat-error>Le champ ne peut pas être vide</mat-error>
   </mat-form-field>
@@ -18,11 +18,11 @@
       matInput
       placeholder="Mot de passe"
       formControlName="password"
-      />
+    />
 
     <mat-error>Le champ ne peut pas être vide</mat-error>
   </mat-form-field>
 
-  <button mat-flat-button color="primary">Se Connecter</button>
+  <button mat-flat-button color="primary">Se connecter</button>
 
 </form>
