--- a/src/app/adherent/adherents-table/adherents-table.component.html
+++ b/src/app/adherent/adherents-table/adherents-table.component.html
@@ -1,13 +1,12 @@
 <mat-form-field appearance="fill" class="search">
   <mat-label>Filtrer</mat-label>
-  <input matInput [formControl]="filter" #search />
+  <input matInput [formControl]="filter" />
 
   <button
     type="button"
     matSuffix
     mat-icon-button
-    *ngIf="search.value"
-    (click)="search.value = ''"
+    (click)="filter.patchValue('')"
   >
     <mat-icon>close</mat-icon>
   </button>
