--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -11,8 +11,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-image: url('/assets/login-background.jpg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 
   form {
+    z-index: 10;
     display: flex;
     flex-direction: column;
     width: 400px;
@@ -21,9 +26,21 @@
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, .2), 0 5px 5px 0 rgba(0, 0, 0, .24);
 
     .mat-flat-button {
+      margin-top: 16px;
       border-radius: 0;
     }
 
+  }
+
+  &:after {
+    content: '';
+    z-index: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, .7);
   }
 
 }
