--- a/src/css/abstracts/_colors.scss
+++ b/src/css/abstracts/_colors.scss
@@ -33,7 +33,7 @@ $lpr-primary: (
     200: $black-87-opacity,
     300: $black-87-opacity,
     400: $black-87-opacity,
-    500: $black-87-opacity,
+    500: #FFFFFF,
     600: $black-87-opacity,
     700: $black-87-opacity,
     800: #FFFFFF,
