--- a/src/app/adherent/adherents-table/adherents-table.component.scss
+++ b/src/app/adherent/adherents-table/adherents-table.component.scss
@@ -2,6 +2,10 @@
 //  Adherents table
 //----------------------------------------
 
+.newAdherent {
+  padding-bottom: 40px;
+}
+
 .search {
   width: 100%;
 }
