Formalaire de création d'une vente

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -5,8 +5,9 @@
     alt="La Petite Rennes"
     routerLink="/" />
 
-  <button mat-button routerLink="/articles" routerLinkActive="mat-primary">Articles</button>
   <button mat-button routerLink="/adherents" routerLinkActive="mat-primary">Adhérents</button>
+  <button mat-button routerLink="/ventes/nouvelle" routerLinkActive="mat-primary">Nouvelle vente</button>
+  <button mat-button routerLink="/articles" routerLinkActive="mat-primary">Articles</button>
 
   <span class="flex"></span>
 
